--- a/spring-boot-2.2.0.RELEASE/spring-boot-tests/spring-boot-smoke-tests/pom.xml
+++ b/spring-boot-2.2.0.RELEASE/spring-boot-tests/spring-boot-smoke-tests/pom.xml
@@ -107,6 +107,7 @@
 		<module>spring-boot-smoke-test-websocket-undertow</module>
 		<module>spring-boot-smoke-test-webservices</module>
 		<module>spring-boot-smoke-test-xml</module>
+		<module>spring-boot-web-test</module>
 	</modules>
 	<!-- No dependencies - otherwise the smoke tests won't work if you change the
 		parent -->
